Fix AArch64 OpenJDK build failure with gcc-5

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • None
    • b25
    • aarch64
    • linux

      OpenJDK build failed on AArch64 with gcc-5:

      ---
      For target hotspot_variant-server_libjvm_objs_vm_version_linux_aarch64.o:
      ./src/hotspot/os_cpu/linux_aarch64/vm_version_linux_aarch64.cpp: In static member function 'static void VM_Version::get_os_cpu_info()':
      ./src/hotspot/os_cpu/linux_aarch64/vm_version_linux_aarch64.cpp:96:40: error: expected ',' before ')' token
      static_assert(CPU_FP == HWCAP_FP);
      ^
      ./src/hotspot/os_cpu/linux_aarch64/vm_version_linux_aarch64.cpp:96:40: error: expected string-literal before ')' token
      ./src/hotspot/os_cpu/linux_aarch64/vm_version_linux_aarch64.cpp:97:43: error: expected ',' before ')' token
      static_assert(CPU_ASIMD == HWCAP_ASIMD);
      ^

      As one C++17 feature, the argument 'message' of static_assert can be optional. This feature, i.e. static_assert with no message, is supported by gcc-6 or higher.[1]

            Assignee:
            Ningsheng Jian (Inactive)
            Reporter:
            Ningsheng Jian (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: