8255975: Fix AArch64 OpenJDK build failure with gcc-5

Backport da48003abd2e88ad0d435c01a7c17073e1a61569